--- a/tema2.html
+++ b/tema2.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex"/>
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/nyny.svg" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="img/nyny.svg" />
@@ -67,8 +68,7 @@
         </article>
       </section>
     </main>
-  </body>
-  <footer>
+     <footer>
     <p>
       <a
         href="https://www.facebook.com/profile.php?id=100009255955648"
@@ -91,4 +91,5 @@
       menu.classList.toggle("active");
     }
   </script>
+  </body>
 </html>
