--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex" />
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/nyny.svg" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="img/nyny.svg" />
@@ -26,7 +27,6 @@
   <body>
     <!--jeg inkludere min header med JavaScript -->
     <div id="header"></div>
-
     <script>
       fetch("header.html")
         .then((response) => response.text())
@@ -34,28 +34,30 @@
           document.getElementById("header").innerHTML = data;
         });
     </script>
-
     <main>
       <!-- her skal min forside/hero sektion være -->
       <!-- <section class="forside">
         <h1>PORTFOLIO</h1>
       </section> -->
-      <section>
+      <section class="animation">
         <script
           src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
           type="module"
         ></script>
         <dotlottie-player
+          class="portfolio-animation"
           src="https://lottie.host/9ad02c41-f96d-47b6-b4f8-68765a1418ac/J6MCK5mc5H.lottie"
           background="transparent"
           speed="1"
-          style="width: 1200px; height: 500px"
+          style="width: 1000px; height: auto"
           loop
           autoplay
         ></dotlottie-player>
       </section>
 
       <section class="lilleintro">
+        <br />
+        <br />
         <h3>
           Få indblik i min læring på Multimediedesign - og lær mig bedre at
           kende.
@@ -91,10 +93,9 @@
         >
       </section>
       <section>
+        <br />
         <div class="btn3">
-          <a class="btn1" href="projekter.html"
-            ><strong>Min proces &rarr;</strong></a
-          >
+          <a class="btn1" href="projekter.html">MIN PROCES &rarr;</a>
         </div>
         <br />
       </section>
@@ -102,47 +103,37 @@
       <section>
         <div class="hvemerjeg">
           <div class="mellemrum">
-            <br />
             <h2>En personlig tilgang</h2>
-            <strong><li>Iderig</li></strong>
-            <br />
-            <strong><li>Kreativ</li></strong>
-            <br />
-            <strong><li>Nysgerrig</li></strong>
-            <br />
-            <br />
-            <a class="btn2" href="ommig.html"
-              ><strong>Lær mig at kende &rarr;</strong></a
-            >
+            <p>Iderig</p>
+            <p>Kreativ</p>
+            <p>Nysgerrig</p>
+            <a class="btn2" href="ommig.html">LÆR MIG AT KENDE &rarr;</a>
           </div>
 
           <div><img src="img/pc.JPG" alt="Emilie" /></div>
         </div>
       </section>
     </main>
+    <footer>
+      <p>
+        <a
+          href="https://www.facebook.com/profile.php?id=100009255955648"
+          target="_blank"
+        >
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/emiliemrasmussen/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </p>
+      <p>Copyright © 2025 Emilie Rasmussen</p>
+    </footer>
+    <!-- burgermenu  -->
+    <script>
+      function toggleMenu() {
+        const menu = document.getElementById("nav-links");
+        menu.classList.toggle("active");
+      }
+    </script>
   </body>
-
-  <footer>
-    <p>
-      <a
-        href="https://www.facebook.com/profile.php?id=100009255955648"
-        target="_blank"
-      >
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="https://www.instagram.com/emiliemrasmussen/" target="_blank">
-        <i class="fab fa-instagram"></i>
-      </a>
-    </p>
-
-    <p>Copyright © 2025 Emilie Rasmussen</p>
-  </footer>
-
-  <!-- burgermenu  -->
-  <script>
-    function toggleMenu() {
-      const menu = document.getElementById("nav-links");
-      menu.classList.toggle("active");
-    }
-  </script>
 </html>
