tilføjer billeder fra mine sites

--- a/tema2.html
+++ b/tema2.html
@@ -53,10 +53,7 @@
             design med mobile first-tilgang, samt wireframes og styletiles.
           </p>
           <p>
-            Jeg arbejdede med tekstopsætning, billedformater, ophavsret og
-            semantisk HTML.
-          </p>
-          <p>Jeg lærte at bruge Git og validerede mit kode.</p>
+            Jeg arbejdede med tekstopsætning, billedformate og lærte at bruge Git og validerede mit kode.</p>
 
           <!-- mine link til mine projekter på de forskellige temaer -->
           <div class="btn3">
@@ -66,6 +63,15 @@
           </div>
           <br />
         </article>
+         </section>
+
+          <section>
+        <div class="billederække">
+          <img src="img/mobil1.webp" alt="billede 1" />
+          <img src="img/mobil2.webp" alt="billede 2" />
+          <img src="img/mobil3.webp" alt="billede 3" />
+          <img src="img/mobil4.webp" alt="billede 4" />
+        </div>
       </section>
     </main>
      <footer>
