--- a/tema3.html
+++ b/tema3.html
@@ -78,6 +78,14 @@
         </div>
         <br />
       </section>
+          <section>
+        <div class="billederække">
+          <img src="img/emne1.webp" alt="billede 1" />
+          <img src="img/emne2.webp" alt="billede 2" />
+          <img src="img/emne3.webp" alt="billede 3" />
+          <img src="img/emne4.webp" alt="billede 4" />
+        </div>
+      </section>
     </main>
       <footer>
     <p>
