--- a/tema4.html
+++ b/tema4.html
@@ -71,6 +71,15 @@
         </div>
         <br />
       </section>
+          </section>
+          <section>
+        <div class="billederække">
+          <img src="img/emergency1.webp" alt="billede 1" />
+          <img src="img/emergency2.webp" alt="billede 2" />
+          <img src="img/emergency3.webp" alt="billede 3" />
+          <img src="img/emergenzy4.webp" alt="billede 4" />
+        </div>
+      </section>
     </main>
     <footer>
       <p>
