--- a/tema5.html
+++ b/tema5.html
@@ -77,6 +77,14 @@
         </div>
         <br />
       </section>
+      <section>
+        <div class="billederække">
+          <img src="img/virksomhed1.webp" alt="billede 1" />
+          <img src="img/virksomhed2.webp" alt="billede 2" />
+          <img src="img/virksomhed3.webp" alt="billede 3" />
+          <img src="img/virksomhed4.webp" alt="billede 4" />
+        </div>
+      </section>
     </main>
     <footer>
       <p>
