--- a/tema6.html
+++ b/tema6.html
@@ -63,6 +63,14 @@
         </div>
         <br />
       </section>
+      <section>
+        <div class="billederække">
+          <img src="img/portfolio1.webp" alt="billede 1" />
+          <img src="img/portfolio2.webp" alt="billede 2" />
+          <img src="img/portfolio3.webp" alt="billede 3" />
+          <img src="img/portfolio4.webp" alt="billede 4" />
+        </div>
+      </section>
     </main>
     <footer>
       <p>
