--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
             <p>Nysgerrig</p>
             <a class="btn2" href="ommig.html">LÆR MIG AT KENDE &rarr;</a>
           </div>
-
-          <div><img src="img/pc.JPG" alt="Emilie" /></div>
+          <div><img src="img/pc.webp" alt="Emilie" /></div>
         </div>
       </section>
     </main>
