--- a/ommig.html
+++ b/ommig.html
@@ -61,7 +61,7 @@
         </div>
         <div class="fadeIn">
         <div class="mig">
-          <img src="img/seejpink.jpg" alt="billede" />
+          <img src="img/seejpink.webp" alt="billede" />
         </div>
         </div>
       </section>
@@ -111,7 +111,6 @@
         </div>
         <br>
       </section>
-      <!-- Billede collage her??? -->
       <section></section>
     </main>
       <footer>
