--- a/ommig.html
+++ b/ommig.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="noindex"/>
+    <meta name="robots" content="noindex" />
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/nyny.svg" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="img/nyny.svg" />
@@ -57,12 +57,12 @@
             kombinere det kreative med nye udfordringer og udvikle mig hele
             tiden.
           </p>
-          <br>
+          <br />
         </div>
         <div class="fadeIn">
-        <div class="mig">
-          <img src="img/seejpink.webp" alt="billede" />
-        </div>
+          <div class="mig">
+            <img src="img/seejpink.webp" alt="billede" />
+          </div>
         </div>
       </section>
 
@@ -71,21 +71,31 @@
         <details>
           <summary>Udannelse</summary>
           <p>2025 - 2027 | Multimediedesign | KEA Københavns Erhvervsakademi</p>
-          <p>2023 - 2024 | Ennegrammets grunduddannelse | Enneagramstedet Roskilde</p>
-          <p>2020 - 2022 | HF m. Mat/Erhversøkonomi som hovedfag | Espegærde gymnasium</p>
-          <p>2017 - 2018 | Gel nail polish full course | The Gel Bottle</p></p>
+          <p>
+            2023 - 2024 | Ennegrammets grunduddannelse | Enneagramstedet
+            Roskilde
+          </p>
+          <p>
+            2020 - 2022 | HF m. Mat/Erhversøkonomi som hovedfag | Espegærde
+            gymnasium
+          </p>
+          <p>2017 - 2018 | Gel nail polish full course | The Gel Bottle</p>
         </details>
 
         <details>
           <summary>Arbejde</summary>
-          <p>2018 - 2025 | Selvstændig negleteknikker | Konaktepenails Helsingør</p>
-          <p>2023 - 2024 | Pædagogmedhjælper | Nygaard special skole Helsingør</p>
+          <p>
+            2018 - 2025 | Selvstændig negleteknikker | Konaktepenails Helsingør
+          </p>
+          <p>
+            2023 - 2024 | Pædagogmedhjælper | Nygaard special skole Helsingør
+          </p>
           <p>2021 - 2022 | Service medarbejder | Mcdonalds Helsingør</p>
         </details>
 
         <details>
           <summary>Kompetencer</summary>
-          <p>Første semester på KEA har givet mig kompetencer i: </p>
+          <p>Første semester på KEA har givet mig kompetencer i:</p>
           <p>-Adobe pakken | Creative cloud | Figma</p>
           <p>-HTML, CSS, Github & JavaScript</p>
           <p>-Idegenerering & designprincipper</p>
@@ -94,13 +104,12 @@
           <p>-Redesign af hjemmeside</p>
         </details>
       </section>
+
       <section>
         <div class="btn3">
-          <a class="btn" href="projekter.html"
-            >SE MIT FORLØB &rarr;</a
-          >
+          <a class="btn" href="projekter.html">SE MIT FORLØB &rarr;</a>
         </div>
-        <br>
+        <br />
       </section>
       <section>
         <div class="billederække">
@@ -109,32 +118,31 @@
           <img src="img/bali.webp" alt="billede 3" />
           <img src="img/plantorama.webp" alt="billede 4" />
         </div>
-        <br>
+        <br />
       </section>
-      <section></section>
     </main>
-      <footer>
-    <p>
-      <a
-        href="https://www.facebook.com/profile.php?id=100009255955648"
-        target="_blank"
-      >
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="https://www.instagram.com/emiliemrasmussen/" target="_blank">
-        <i class="fab fa-instagram"></i>
-      </a>
-    </p>
+    <footer>
+      <p>
+        <a
+          href="https://www.facebook.com/profile.php?id=100009255955648"
+          target="_blank"
+        >
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/emiliemrasmussen/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </p>
 
-    <p>Copyright © 2025 Emilie Rasmussen</p>
-  </footer>
+      <p>Copyright © 2025 Emilie Rasmussen</p>
+    </footer>
 
-  <!-- burgermenu  -->
-  <script>
-    function toggleMenu() {
-      const menu = document.getElementById("nav-links");
-      menu.classList.toggle("active");
-    }
-  </script>
+    <!-- burgermenu  -->
+    <script>
+      function toggleMenu() {
+        const menu = document.getElementById("nav-links");
+        menu.classList.toggle("active");
+      }
+    </script>
   </body>
 </html>
