--- a/tema2.html
+++ b/tema2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="noindex"/>
+    <meta name="robots" content="noindex" />
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/nyny.svg" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="img/nyny.svg" />
@@ -35,9 +35,9 @@
       <section>
         <h2>GRUNDLÆGGENDE WEB</h2>
         <!-- min knap tilbage -->
-       <a class="goback" href="projekter.html"><p>&larr;</p></a>
+        <a class="goback" href="projekter.html"><p>&larr;</p></a>
         <!-- <button onclick="history.back()">Go Back</button> -->
-  
+
         <article class="article">
           <!-- min tema beskrivelse -->
           <h3>Webdesign og kodning</h3>
@@ -51,7 +51,9 @@
             design med mobile first-tilgang, samt wireframes og styletiles.
           </p>
           <p>
-            Jeg arbejdede med tekstopsætning, billedformate og lærte at bruge Git og validerede mit kode.</p>
+            Jeg arbejdede med tekstopsætning, billedformate og lærte at bruge
+            Git og validerede mit kode.
+          </p>
 
           <!-- mine link til mine projekter på de forskellige temaer -->
           <div class="btn3">
@@ -61,8 +63,9 @@
           </div>
           <br />
         </article>
+      </section>
 
-        <section>
+      <section>
         <div class="billederække">
           <img src="img/mobil1.webp" alt="billede 1" />
           <img src="img/mobil2.webp" alt="billede 2" />
@@ -71,28 +74,29 @@
         </div>
       </section>
     </main>
-     <footer>
-    <p>
-      <a
-        href="https://www.facebook.com/profile.php?id=100009255955648"
-        target="_blank"
-      >
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="https://www.instagram.com/emiliemrasmussen/" target="_blank">
-        <i class="fab fa-instagram"></i>
-      </a>
-    </p>
 
-    <p>Copyright © 2025 Emilie Rasmussen</p>
-  </footer>
+    <footer>
+      <p>
+        <a
+          href="https://www.facebook.com/profile.php?id=100009255955648"
+          target="_blank"
+        >
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/emiliemrasmussen/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </p>
 
-  <!-- burgermenu  -->
-  <script>
-    function toggleMenu() {
-      const menu = document.getElementById("nav-links");
-      menu.classList.toggle("active");
-    }
-  </script>
+      <p>Copyright © 2025 Emilie Rasmussen</p>
+    </footer>
+
+    <!-- burgermenu  -->
+    <script>
+      function toggleMenu() {
+        const menu = document.getElementById("nav-links");
+        menu.classList.toggle("active");
+      }
+    </script>
   </body>
 </html>
