--- a/projekter.html
+++ b/projekter.html
@@ -9,7 +9,6 @@
     <link rel="icon" type="image/svg+xml" href="img/nyny.svg" />
     <link rel="shortcut icon" href="img/nyny.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="img/nyny.svg" />
-    <link rel="manifest" href="/site.webmanifest" />
     <!-- får min footer ikoner til at virke -->
     <link
       rel="stylesheet"
@@ -17,9 +16,9 @@
     />
 
     <title>Projekter</title>
-    <link rel="stylesheet" href="header.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="/header.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/footer.css" />
   </head>
 
   <body>
