--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="icon" type="image/svg+xml" href="img/nyny.svg" />
     <link rel="shortcut icon" href="img/nyny.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="img/nyny.svg" />
-    <link rel="manifest" href="/site.webmanifest" />
 
     <!-- får min footer ikoner til at virke -->
     <link
@@ -18,10 +17,10 @@
     />
 
     <title>Forside</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="layout.css" />
-    <link rel="stylesheet" href="header.css" />
-    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/layout.css" />
+    <link rel="stylesheet" href="/header.css" />
+    <link rel="stylesheet" href="/footer.css" />
   </head>
 
   <body>
