--- a/tema2.html
+++ b/tema2.html
@@ -9,15 +9,15 @@
     <link rel="icon" type="image/svg+xml" href="img/nyny.svg" />
     <link rel="shortcut icon" href="img/nyny.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="img/nyny.svg" />
-    <link rel="manifest" href="/site.webmanifest" />
+
     <!-- får min footer ikoner til at virke -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <title>Tema 2</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/footer.css" />
   </head>
   <body>
     <!--jeg inkludere min header med JavaScript -->
