tilføjer sej hover

--- a/projekter.html
+++ b/projekter.html
@@ -16,9 +16,9 @@
     />
 
     <title>Projekter</title>
-    <link rel="stylesheet" href="/header.css" />
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/footer.css" />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="footer.css" />
   </head>
 
   <body>
@@ -64,6 +64,7 @@
           <a href="tema6.html">TEMA 6</a>
         </div>
       </section>
+
       <section>
         <div class="btn3">
           <a class="btn" href="ommig.html">LIDT OM MIG &rarr;</a>
