--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     />
 
     <title>Forside</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/layout.css" />
-    <link rel="stylesheet" href="/header.css" />
-    <link rel="stylesheet" href="/footer.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="layout.css" />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="footer.css" />
   </head>
 
   <body>
