--- a/ommig.html
+++ b/ommig.html
@@ -16,10 +16,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <title>Om mig</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/layout.css" />
-    <link rel="stylesheet" href="/header.css" />
-    <link rel="stylesheet" href="/footer.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="layout.css" />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="footer.css" />
   </head>
 
   <body>
