--- a/tema2.html
+++ b/tema2.html
@@ -16,8 +16,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <title>Tema 2</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/footer.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="footer.css" />
   </head>
   <body>
     <!--jeg inkludere min header med JavaScript -->
